<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<!-- ************************************************************************************************* -->
	<!-- * General Section * -->
	<!-- ************************************************************************************************* -->
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.github</groupId>
	<artifactId>mars-sim</artifactId>
	<packaging>pom</packaging>
	<version>3.1.0</version>
	<name>mars-sim</name>
	<url>https://github.com/mars-sim/mars-sim</url>
	<inceptionYear>2009</inceptionYear>
	<properties>
		<release>11</release>
		<project.version>3.1.0</project.version>
		<junit.version>4.12</junit.version>
		<timestamp>${maven.build.timestamp}</timestamp>
		<maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
		<!-- Set file encoding to UTF-8. See http://stackoverflow.com/questions/3017695/how-to-configure-encoding-in-maven#3018152 -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<!-- springboot.version>1.3.5.RELEASE</springboot.version -->
		<!-- mapstruct.version>1.1.0.Final</mapstruct.version -->
		<lwjgl.version>3.2.2</lwjgl.version>
		<kotlin.version>1.3.61</kotlin.version>
	</properties>

	<!-- ************************************************************************************************* -->
	<!-- * Developers Section * -->
	<!-- ************************************************************************************************* -->
	<developers>
		<developer>
			<name>Scott Davis</name>
			<roles>
				<role>manager</role>
			</roles>
			<timezone>-8</timezone>
		</developer>
		<developer>
			<name>Lars Næsbye Christensen</name>
			<roles>
				<role>developer</role>
			</roles>
			<timezone>+1</timezone>
		</developer>
		<developer>
			<name>Manny Kung</name>
			<roles>
				<role>developer</role>
			</roles>
			<timezone>-8</timezone>
		</developer>
		<developer>
			<name>Shirish Agarwal</name>
			<roles>
				<role>integration and testing</role>
			</roles>
			<timezone>+5.5</timezone>
		</developer>
		<developer>
			<name>Dennis Krenz</name>
			<roles>
				<role>conceptual design</role>
			</roles>
			<timezone>+2</timezone>
		</developer>
	</developers>
	
	<!-- ************************************************************************************************* -->
	<!-- * Module Section * -->
	<!-- ************************************************************************************************* -->
	<modules>
		<!--module>mars-sim-android</module -->
		<module>mars-sim-core</module>
		<module>mars-sim-headless</module>
		<module>mars-sim-main</module>
		<module>mars-sim-mapdata</module>
		<!-- <module>mars-sim-network</module-->
		<!-- module>mars-sim-service</module-->
		<module>mars-sim-ui</module>
		<!--module>mars-sim-javafx</module-->
		<!-- module>mars-sim-lwjgl</module-->
    	<!--module>mars-sim-libgdx</module-->
		<module>mars-sim-console</module>
	</modules>
	<!-- ************************************************************************************************* -->
	<!-- * Build Section * -->
	<!-- ************************************************************************************************* -->
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>kotlin-maven-plugin</artifactId>
					<groupId>org.jetbrains.kotlin</groupId>
					<version>${kotlin.version}</version>
					<executions>
						<execution>
							<id>compile</id>
							<phase>process-sources</phase>
							<goals>
								<goal>compile</goal>
							</goals>
							<configuration>
								<sourceDirs>
									<sourceDir>${project.basedir}/src/main/kotlin</sourceDir>
									<sourceDir>${project.basedir}/src/main/java</sourceDir>
									<sourceDir>${project.basedir}/src/main/resources</sourceDir>
								</sourceDirs>
							</configuration>
						</execution>
						<execution>
		                    <id>test-compile</id>
		                    <phase>process-test-sources</phase>
		                    <goals>
		                        <goal>test-compile</goal>
		                    </goals>
		                    <configuration>
		                        <sourceDirs>
		                            <source>${project.basedir}/src/test/java</source>
		                            <source>${project.basedir}/src/test/kotlin</source>
		                            <source>${project.basedir}/src/test/resources</source>
		                        </sourceDirs>
		                    </configuration>
		                </execution>
					</executions>
					<dependencies>
						<dependency>
							<groupId>org.jetbrains.kotlin</groupId>
							<artifactId>kotlin-stdlib</artifactId>
							<version>${kotlin.version}</version>
						</dependency>
					</dependencies>					
					<!--dependencies>
						<dependency>
							<groupId>org.jetbrains.kotlin</groupId>
							<artifactId>kotlin-maven-allopen</artifactId>
							<version>${kotlin.version}</version>
						</dependency>
					</dependencies-->
				</plugin>
				<plugin>
				<!--https://mvnrepository.com/artifact/com.github.spotbugs/spotbugs-maven-plugin -->
				  <groupId>com.github.spotbugs</groupId>
				  <artifactId>spotbugs-maven-plugin</artifactId>
				  <version>3.1.12.2</version>
				  <dependencies>
				    <!-- https://spotbugs.github.io/ -->
				    <dependency>
				      <groupId>com.github.spotbugs</groupId>
				      <artifactId>spotbugs</artifactId>
				      <version>3.1.12.2</version>
				    </dependency>
				  </dependencies>
				</plugin>			
				<!--  https://mvnrepository.com/artifact/org.codehaus.mojo/versions-maven-plugin -->
				<plugin>
				    <groupId>org.codehaus.mojo</groupId>
				    <artifactId>versions-maven-plugin</artifactId>
				    <version>2.7</version>
				    <configuration>
				        <generateBackupPoms>false</generateBackupPoms>
				    </configuration>
				</plugin>
				<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
				<plugin>
				    <groupId>org.apache.maven.plugins</groupId>
				    <artifactId>maven-surefire-plugin</artifactId>
				    <version>3.0.0-M4</version>
				    <configuration>
				        <argLine>
				            --illegal-access=permit
				        </argLine>
				    </configuration>
				</plugin>
				<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-failsafe-plugin -->
				<plugin>
				    <groupId>org.apache.maven.plugins</groupId>
				    <artifactId>maven-failsafe-plugin</artifactId>
				    <version>3.0.0-M3</version>
				    <configuration>
				        <argLine>
				            --illegal-access=permit
				        </argLine>
				    </configuration>
				</plugin>
				<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.0</version>
					<configuration>
						<release>${release}</release>
						<compilerArgs>
			            	<arg>-Xlint:unchecked</arg>
			            	<arg>-Xlint:deprecation</arg>
			            	<arg>-Xlint:removal</arg>
						</compilerArgs>
						<showWarnings>false</showWarnings>
                        <showDeprecation>false</showDeprecation>
						<verbose>false</verbose>			          
					</configuration>
					<!-- see https://www.baeldung.com/kotlin-maven-java-project -->
					<!-- see https://kotlinlang.org/docs/reference/using-maven.html -->
	       			<executions>
		                <!-- Replacing default-compile as it is treated specially by maven -->
		                <execution>
		                    <id>default-compile</id>
		                    <phase>none</phase>
		                </execution>
		                <!-- Replacing default-testCompile as it is treated specially by maven -->
		                <execution>
		                    <id>default-testCompile</id>
		                    <phase>none</phase>
		                </execution>
		                <execution>
		                    <id>java-compile</id>
		                    <phase>compile</phase>
		                    <goals> <goal>compile</goal> </goals>
		                </execution>
		                <execution>
		                    <id>java-test-compile</id>
		                    <phase>test-compile</phase>
		                    <goals> <goal>testCompile</goal> </goals>
		                </execution>
	            	</executions>				
				</plugin>

				<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-deploy-plugin : 33KB-->
				<plugin>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>3.0.0-M1</version>
					<executions>
						<execution>
							<id>default-deploy</id>
							<phase>deploy</phase>
							<goals>
								<goal>deploy</goal>
							</goals>
						</execution>
					</executions>
					<dependencies>
						<!-- https://mvnrepository.com/artifact/org.apache.maven.wagon/wagon-ssh -->
						<dependency>
						    <groupId>org.apache.maven.wagon</groupId>
						    <artifactId>wagon-ssh</artifactId>
						    <version>3.3.3</version>
						</dependency>
					</dependencies>
				</plugin>

			</plugins>
		</pluginManagement>
	</build>
	<!-- ************************************************************************************************* -->
	<!-- * Reporting Section * -->
	<!-- ************************************************************************************************* -->
	<reporting>
		<plugins>
			<plugin>
				<!-- https://maven.apache.org/plugins/maven-dependency-plugin/examples/copying-project-dependencies.html -->
				<!-- See https://maven.apache.org/plugins/maven-dependency-plugin/usage.html -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.1.1</version>
				<configuration>
					<outputDirectory>
						${project.build.directory}
					</outputDirectory>
				</configuration>
			</plugin>
		</plugins>
	</reporting>
	<!-- ************************************************************************************************* -->
	<!-- * Repository Section * -->
	<!-- ************************************************************************************************* -->
	<repositories>
		<repository>
			<id>mars-sim</id>
			<name>Mars Sim Project Maven Repository</name>
			<url>https://mars-sim.sourceforge.io/maven-repo/</url>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>maven central</id>
			<url>http://repo1.maven.org/maven/</url>
		</pluginRepository>
		<pluginRepository>
			<id>spring-releases</id>
			<url>https://repo.spring.io/libs-release</url>
		</pluginRepository>
		<pluginRepository>
			<id>sonatype</id>
			<name>Sonatype</name>
			<url>https://oss.sonatype.org/content/repositories/releases</url>
		</pluginRepository>
		<pluginRepository>
			<id>jcenter</id>
			<url>http://jcenter.bintray.com/</url>
		</pluginRepository>

	</pluginRepositories>
</project>